# FreeFinanceData

./: .gitignore  README.md  Untitled.sql  pyproject.toml  register_prefect_flow.py
conf/base/: catalog.yml
conf/base/parameters/: notifications.yml
config/: main.yaml
data/01_raw/: curves.json  location.json
docs/source/: conf.py  index.rst
notebooks/: alpha.ipynb  backtest.ipynb  factor_regression.ipynb  intro.ipynb  kedro.ipynb  metrics.py  portfolio.py  treasury.ipynb
sql/: curves.sql
src/: curves.py  metrics.py  portfolio.py  process.py  requirements.txt  setup.py  train_model.py
src/tests/: test_run.py
src/tests/pipelines/notifications/: test_pipeline.py
src/timeseries/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/timeseries/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/timeseries/pipelines/notifications/: README.md  __init__.py  nodes.py  pipeline.py  test.html
