[tool.poetry]
name = "timeseries"
version = "0.1.0"
description = ""
authors = ["yeungadrian"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
altair = "^4.2.0"
pandas = "^1.4.3"
prefect = "^1.2.4"
psycopg2 = "^2.9.3"
pyarrow = "^8.0.0"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"
tqdm = "^4.64.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
